--- a/smart-data-platform/scripts/config.env
+++ b/smart-data-platform/scripts/config.env
@@ -1,23 +1,29 @@
 #!/bin/bash
 # Smart Data Platform - 端口配置
-# 端口范围: 5500-5560
+# 端口范围: 3100-3150
 
 # 项目名称
 PROJECT_NAME="smart-data-platform"
 
 # 服务端口配置
-BACKEND_PORT=5500
-FRONTEND_PORT=5501
-POSTGRES_PORT=5502
-REDIS_PORT=5503
-MINIO_API_PORT=5504
-MINIO_CONSOLE_PORT=5505
-SUPERSET_PORT=5506
+BACKEND_PORT=3101
+FRONTEND_PORT=3100
+POSTGRES_PORT=3102
+REDIS_PORT=3103
+MINIO_API_PORT=3104
+MINIO_CONSOLE_PORT=3105
+SUPERSET_PORT=3106
+MYSQL_PORT=3108
 
 # 数据库配置
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=smart_data
+
+# MySQL配置
+MYSQL_ROOT_PASSWORD=mysql123
+MYSQL_USER=app_user
+MYSQL_PASSWORD=app_password
 
 # Redis配置
 REDIS_PASSWORD=
